# aoc-2024

./: Cargo.toml  LICENSE  README.md
src/: direction.rs  graph.rs  grid.rs  lib.rs  line_segment.rs  main.rs  maps.rs  template.txt
src/template/: day.rs  mod.rs  readme_benchmarks.rs
