[package]
name = "advent_of_code"
version = "0.10.0"
edition = "2021"
default-run = "advent_of_code"
publish = false
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
advent-of-code-ocr = "0.1.1"
anyhow = "1.0.86"
aoc-parse = "0.2.18"
array_tool = "1.0.3"

# Template dependencies
chrono = { version = "0.4.31", optional = true }
dhat = { version = "0.3.2", optional = true }
fancy-regex = "0.13.0"
hashbrown = "0.14.3"
itertools = "0.12.0"
lazy_static = "1.4.0"
libm = "0.2.8"
memoize = "0.4.1"
nalgebra = "0.32.3"
ndarray = "0.16.0"
num = "0.4.1"
num-modular = "0.6.1"
ordered-float = "4.2.2"
paste = "1.0.14"
pathfinding = "4.6.0"
petgraph = "0.6.4"
pico-args = "0.5.0"
rayon = "1.8.0"
regex = "1.10.2"
rustworkx-core = "0.13.2"
tinyjson = "2.5.1"
topological-sort = "0.2.2"
unindent = "0.2.3"
z3 = "0.12.1"

# Solution dependencies
